unit_tests/preprocessor/errors/failing-short-circuit-or.correct
preprocessor/errors/failing-short-circuit-or:1: error: division by zero
